# arithmetical_dragons-cpp

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  draft.cpp
src/: Dragon.h  Dragons.cpp  Dragons.h  Enemy.cpp  Enemy.h  Event.cpp  Event.h  Game.cpp  Game.h  Hero.cpp  Hero.h  Quests.cpp  Quests.h  ShowState.cpp  ShowState.h  Unit.cpp  Unit.h  arithmetical_dragons.cpp  dragon.h  enemy.h  hero.h  unit.h
src/modifiers/: Quests.cpp  Quests.h
src/units/: Enemy.cpp  Enemy.h  Hero.cpp  Hero.h
src/units/enemies/: AdditionDragon.cpp  AdditionDragon.h  MultiplicationDragon.cpp  MultiplicationDragon.h  SubtractionDragon.cpp  SubtractionDragon.h
